Contribution updated to latest.
This is a part of the https://github.com/spring-cloud-task-app-starters/app-starters-release/issues/43 effort

--- a/spring-cloud-starter-task-timestamp-batch/README.adoc
+++ b/spring-cloud-starter-task-timestamp-batch/README.adoc
@@ -24,4 +24,9 @@ $ ./mvnw clean package
 ```
 java -jar timestamp-batch-task-<version>.jar
 ```
+
+== Contributing
+
+We welcome contributions! Follow this https://github.com/spring-cloud-task-app-starters/app-starters-release/blob/master/spring-cloud-task-app-starters-
+
 //end::ref-doc[]
