Document update - Warning message added - Contribution URL corrected

--- a/readme.adoc
+++ b/readme.adoc
@@ -1,4 +1,4 @@
-# Timestamp Task Application
+# Timestamp Batch Task Application
 
 To learn more about this application and the supported properties, please review the following link.
 
